<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:scrollbars="vertical"
    android:background="#FFC5F489"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:weightSum="2"
        >

        <LinearLayout

            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1">

            <TextView
                android:id="@+id/update_photo_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/click_photo_to_update"
                android:textAlignment="center"
                android:textSize="12sp"
                />

            <ImageView
                android:id="@+id/image_product_photo"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"
                android:adjustViewBounds="true"
                android:scaleType="centerCrop"
                android:src="@mipmap/ic_launcher"
                android:baselineAlignBottom="@+id/update_photo_label"
                />

            <TextView
                android:id="@+id/name_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:text="@string/product_name"
                />

            <EditText
                android:id="@+id/inventory_item_name_edittext"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/product_name"
                android:inputType="textCapWords"
                android:maxLines="1"
                android:hint="Product Name" />

            <TextView
                android:id="@+id/descriptionLable"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/product_description"
                />

            <EditText
                android:id="@+id/inventory_item_description_edittext"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/product_description"
                android:inputType="textMultiLine"
                android:maxLength="30"
                android:maxLines="4"
                android:hint="@string/product_description" />

            <TextView
                android:id="@+id/lable_supplier"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/set_supplier"
                />

            <EditText
                android:id="@+id/suplier_edittext"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/set_supplier"
                android:inputType="textPersonName"
                android:maxLines="1"
                android:hint="set supplier"
                />

            <TextView
                android:id="@+id/inventoryLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/set_inventory"
                />

            <EditText
                android:id="@+id/inventory_item_current_quantity_edittext"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/set_inventory"
                android:inputType="number"
                android:maxLines="1"
                android:hint="0"
                />

            <TextView
                android:id="@+id/salesLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_product_sales"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="8dp"/>

            <EditText
                android:id="@+id/current_sales_edittext"
                style="@style/EditorTheme"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/set_product_sales"
                android:inputType="number"
                android:maxLines="1"
                android:hint="0"

                />

            <TextView
                android:id="@+id/priceLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/set_product_price"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"/>

            <EditText
                android:id="@+id/inventory_item_price_edittext"
                style="@style/EditorFieldStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:contentDescription="@string/set_product_price"
                android:inputType="number"
                android:hint="0 $"

                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_weight="1"
            >

            <ImageButton
                android:id="@+id/order_supplier_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="85dp"
                android:layout_marginBottom="8dp"
                android:src="@drawable/contact_supplier"
                />

            <TextView
                android:id="@+id/order_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="end"
                android:textAlignment="center"
                android:text="@string/order_more"

                />

            <ImageButton
                android:id="@+id/delete_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="8dp"
                android:tint="@android:color/holo_red_dark"
                android:src="@drawable/delete_pro" />

            <TextView
                android:id="@+id/delete_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="end"
                android:text="Delete Product"
                android:textAlignment="center"
                />

            <ImageButton
                android:id="@+id/save_product_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="16dp"
                android:layout_marginRight="16dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="8dp"
                android:tint="@android:color/holo_green_dark"
                android:src="@drawable/update"
                />

            <TextView
                android:id="@+id/update_save_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginBottom="16dp"
                android:layout_gravity="end"
                android:textAlignment="center"
                android:text="@string/update"
                />

        </LinearLayout>

    </LinearLayout>

</ScrollView>